--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <div class="page">
     <header class="header">
        <img class="header__logo" src="./images/header-logo.svg" alt="Логотип"></img>
-       <a href="#" class=header__lang-link_ru>RU</a>
-       <a href="#" class=header__lang-link_en>EN</a>
+       <a href="#" class=header__lang-link_ru>Ru</a>
+       <a href="#" class=header__lang-link_en>En</a>
     </header>
    <main class="content">
       <section class="lead">
@@ -52,9 +52,9 @@
             <h3 class="place__url-heading">URL</h3>
             <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
           </div>
-         <img class="place__image" src="./images/place-kosa.jpg" alt="Картинка куршской косы"></img>
-         <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных горизонта&nbsp;&mdash; спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.</p>
-         <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.</p> 
+          <img class="place__image" src="./images/place-kosa.jpg" alt="Картинка куршской косы"></img>
+          <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных горизонта&nbsp;&mdash; спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.</p>
+          <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.</p> 
         </div>
         <div class="place">
           <h2 class=place__title>Кольский</h2>
