--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <div class="page">
     <header class="header">
       <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
-      <a href="#" class=header_lang-link_ru>Ru</a>
-      <a href="#" class=header_lang-link_en>En</a>
+      <a href="#" class="header__lang-link header__lang-link_ru">Ru</a>
+      <a href="#" class="header__lang-link header__lang-link_en">En</a>
     </header>
    <main class="content">
       <section class="lead">
@@ -46,7 +46,7 @@
         <img src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка горы" class="photo-grid__item">
         <img src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка скалы" class="photo-grid__item">
         <img src="./images/photo-grid-baikal-2.jpg" alt="Байкал" class="photo-grid__item">
-        <img src="./images/photo-grid-ergaki.jpg" alt="Ергаки" class="photo-grid__item">
+        <img src="./images/photo-grid-ergaki.jpg" alt="Eркин" class="photo-grid__item">
       </section>
      <section class="places">
        <div class="place">
