--- a/index.html
+++ b/index.html
@@ -11,28 +11,25 @@
   <div class="page">
     <header class="header">
       <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
-      <a href="#" class="header__lang-link header__lang-link_ru">Ru</a>
-      <a href="#" class="header__lang-link header__lang-link_en">En</a>
+      <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
+      <a href="#" class="header__lang-link">En</a>
     </header>
    <main class="content">
       <section class="lead">
-        <h1 class="lead__title">Путешествия по&nbsp;России</h1>
-        <div class="lead__subtitle">
-        <p>Настоящая страна не в выпусках</p>
-        <p> новостей, а здесь.</p>
-      </div>
+        <h1 class="lead__title">Путешествия по России</h1>
+        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img class="lead__image" src="images/lead-polka.jpg" alt="Картинка купе поезда">
         <p class="lead__caption">ваша полка — верхняя</p>
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
-        <p class="intro__text">По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только&nbsp;36% планируют провести отпуск в&nbsp;родной стране. Мол, чего мы&nbsp;тут, дома, не&nbsp;видели? На&nbsp;самом деле, Россия&nbsp;&mdash; это целая вселенная с&nbsp;ласковым морем юга, густыми лесами Саян и&nbsp;суровыми льдами плато Путорана. А&nbsp;ещё увидеть все эти красоты можно без миллионов на&nbsp;счету, загранпаспорта и&nbsp;многочасовых перелетов. Как, например, Вера Башмакова&nbsp;&mdash; смелая молодая мама, которая взяла в&nbsp;охапку троих детей, усадила их&nbsp;в&nbsp;свою &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч километров по&nbsp;родной стране. Мы&nbsp;выбрали и&nbsp;описали некоторые интересные места, достойные вашего отпуска.</p>
+        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия &mdash; это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова &mdash; смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою &laquo;Ладу&raquo; и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li>Часовых поясов 11</li>
-          <li>Объектов природного наследия ЮНЕСКО 12</li>
-          <li>Объектов культурного наследия ЮНЕСКО 16</li>
-          <li>Природных заповедников 105</li>
-          <li>Аэропортов 241</li>
+          <li>Часовых поясов <span class="intro__span-normal">11</span></li>
+          <li>Объектов природного наследия ЮНЕСКО <span class="intro__span-normal">12</span></li>
+          <li>Объектов культурного наследия ЮНЕСКО <span class="intro__span-normal">16</span></li>
+          <li>Природных заповедников <span class="intro__span-normal">105</span></li>
+          <li>Аэропортов <span class="intro__span-normal">241</span></li>
         </ul>
       </section>
       <section class="photo-grid">
@@ -58,8 +55,8 @@
           </div>
           <img class="place__image" src="./images/place-kosa.jpg" alt="Картинка куршской косы">
           <div>
-            <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных горизонта&nbsp;&mdash; спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.</p>
-            <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.</p> 
+            <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта &mdash; спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
+            <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству &mdash; самая западная точка России, Балтийская коса, &mdash; и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p> 
           </div>
           </div>
         <div class="place">
@@ -70,8 +67,8 @@
           </div>
          <img class="place__image" src="./images/place-kolsky.jpg" alt="Картинка зимы">
          <div>
-          <p class="place__paragraph">Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская тундра, от&nbsp;которой на&nbsp;юг&nbsp;&mdash; тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-          <p class="place__paragraph">Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали историю арктического фестиваля в&nbsp;Териберке. Возможно, слово &laquo;Хибины&raquo; не&nbsp;осталось под снегом школьных воспоминаний об&nbsp;уроках географии. Возможно, вы&nbsp;не&nbsp;интересовались пронизывающей земную кору сверхглубокой скважиной, а&nbsp;от&nbsp;апатитов вас давно накрывает апатия. Но&nbsp;ваша мечта увидеть северное сияние начинает сбываться с&nbsp;билетом в&nbsp;Мурманск.</p> 
+          <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг &mdash; тайга, а на север &mdash; Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+          <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово &laquo;Хибины&raquo; не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p> 
          </div>
         </div>
         <div class="place">
@@ -82,8 +79,8 @@
           </div>
          <img class="place__image" src="./images/place-altai.jpg" alt="Картинка природы">
           <div>
-            <p class="place__paragraph">Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России. В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы&nbsp;увидите склоны, усыпанные соснами, горные реки и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете в&nbsp;автомобиле окна, сможете познакомиться с&nbsp;невидимым чудом здешних мест&nbsp;&mdash; горным воздухом.</p>
-            <p class="place__paragraph">Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы&nbsp;увидите всё разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули. И&nbsp;знаменитые манулы&nbsp;&mdash; тоже обитатели Алтайского края.</p> 
+            <p class="place__paragraph">Алтай &mdash; одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест &mdash; горным воздухом.</p>
+            <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы &mdash; тоже обитатели Алтайского края.</p> 
           </div>  
         </div>
         <div class="place">
@@ -94,8 +91,8 @@
           </div>
          <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Картинка зимнего байкала">
          <div>
-           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в&nbsp;мире. Многие также знают, что это самый большой источник пресной воды и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.</p>
-           <p class="place__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем старается развить как можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте 2019 года на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.</p> 
+           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
+           <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно б&oacute;льшую скорость на льду. В марте 2019 года на фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд &mdash; 197.011 км/ч.</p> 
           </div>
         </div>
         <div class="place">
@@ -105,22 +102,26 @@
             <a href="http://vodlozero.ru/" class="place__link">http://vodlozero.ru/</a>
           </div>
          <img class="place__image" src="./images/place-karelia.jpg" alt="Картинка природа Карелии">
-         <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых болот никогда не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на&nbsp;сотню километров не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров &mdash; леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
         </div>
       </section>
       <section class="cover">
-        <a class="cover__title"  href="https://stampsy.com/na-elektrichkakh-do-baikala">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</a>
-        <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
+        <a class="cover__background" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+          <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
+          <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
+        </a>
       </section>
     </main>
     <footer class="footer">
-      <ul class="footer__links">
-        <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
-        <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
-        <li><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
-        <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
-        <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
-      </ul>
+      <nav>
+        <ul class="footer__links">
+          <li class="footer__link-position"><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
+          <li class="footer__link-position"><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
+          <li class="footer__link-position"><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
+          <li class="footer__link-position"><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
+          <li class="footer__link-position"><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
+        </ul>
+      </nav>
       <p class="footer__copyright">&copy;2021. Адель Шавалиева</p>
     </footer>
   </div>
